# clickbait-classifier

./: .envrc  .gitignore  LICENSE  Makefile  README.md  api_server.py  buzzfeed-crawl-2014-12-21.json  buzzfeed-crawl-2014-12-22.json  buzzfeed-crawl.json  buzzfeed_scraper.py  classifier.py  flake.nix  interactive.py  nytimes.json  nytimes_converter.py  pyproject.toml  requirements.txt  trainer.py
clickbait_classifier/: classifier.py  interactive.py
clickbait_classifier/data/: rtexttools-nytimes.csv
clickbait_classifier/data/pos/: clickhole.pos.json  dose.pos.json
data/: buzzfeed.json
data/pos/: buzzfeed.pos.json  nytimes.pos.json
scripts/: combine_crawls.py  convert_nytimes.py  scrape_buzzfeed.py  scrape_clickhole.py  scrape_dose.py  tools.py
