[tool.poetry]
name = "clickbait-classifier"
version = "0.1.0"
description = ""
authors = ["Peter Downs <github@peterdowns.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "clickbait_classifier"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.2"
scipy = "^1.10.1"
scikit-learn = "^1.2.1"
nltk = "^3.8.1"
importlib-resources = "^5.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.253"
ruff-lsp = "^0.0.19"
lxml = "^4.9.2"
nltk = "^3.8.1"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
